@@ -1,3 +1,15 @@
+2014-10-14  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Fix the !ENABLE(VIDEO) build after r174353
+        https://bugs.webkit.org/show_bug.cgi?id=137655
+
+        Reviewed by Darin Adler.
+
+        * dom/Document.cpp:
+        * dom/Document.h:
+        * page/Page.cpp:
+        * page/Page.h:
+
 2014-10-14  peavo@outlook.com  <peavo@outlook.com>
 
         [Curl] Compile error in CurlDownload.cpp.
